# cmake-kurs

./: .gitignore  cmake-kurs.txt
1helloworld/: Makefile  mylib.cpp  mylib.h
2helloworld/: Makefile
2helloworld/src/: mylib.cpp
cmake1/: CMakeLists.txt  main.cpp
cmake2/: CMakeLists.txt  main.cpp
cmake2/app/: CMakeLists.txt
cmake2/buils/: CMakeCache.txt  Executable  Makefile
cmake2/src/: CMakeLists.txt  mylib.cpp  mylib.h
make1/: Makefile
make2/: Makefile
make2/src/: main.cpp
